kubernetes/apps/observability/splunk/instance/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: splunk-web
spec:
  hostnames:
    - "${HOSTNAME:=${APP}}.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: splunk-splunk-standalone-service
          namespace: observability
          port: 8000
