kubernetes/apps/observability/splunk/instance/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splunk-web
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: external
  rules:
    - host: "splunk.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: splunk-splunk-instance-standalone-service
                port:
                  number: 8000
            path: /
            pathType: Prefix
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splunk-hec
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: internal
  rules:
    - host: "splunk-hec.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: splunk-splunk-instance-standalone-service
                port:
                  number: 8088
            path: /services/collector
            pathType: Prefix
